--- a/extension/hello.html
+++ b/extension/hello.html
@@ -6,6 +6,12 @@
     <title></title>
 </head>
 <body>
-    wow
+    <input id="text" type="text" />
+    <input id="button" type="button" value="yeee" />
+    <script>
+        button.addEventListener((a)=>{
+            text.value+=text.value;
+        });
+    </script> 
 </body>
 </html>
