--- a/extension/hello.html
+++ b/extension/hello.html
@@ -11,7 +11,12 @@
     <script>
         button.addEventListener((a)=>{
             text.value+=text.value;
+            chrome.tabs.executeScript({
+                code: 'document.body.style.backgroundColor="red"'
+            }).then((returned)=>{
+                document.write(returned);
+            });
         });
-    </script> 
+    </script>
 </body>
 </html>
