--- a/extension/hello.html
+++ b/extension/hello.html
@@ -6,12 +6,10 @@
     <title></title>
 </head>
 <body>
-    <input id="text" type="text" />
+    <input id="text" type="text" autofocus placeholder="localhost:8888" />
     <input id="button" type="button" value="yeee" />
-    <hr />
+    <hr/>
     <div id="div"></div>
-    <script src="hello.js">
-       
-    </script>
+    <script src="hello.js"></script>
 </body>
 </html>
